2010-11-05  Wolfgang Dautermann
    * Use SHA1 password hashing if possible. Changed project links to http://phphell.sourceforge.net/

2010-01-30  Natan Bueno <natan.bueno@gmail.com>
    * phpshell.php
	Added AddOn to editor "vim".  

2010-01-15  Natan Bueno <natan.bueno@gmail.com>
    * phpshell.php
	Replaced deprecated function ereg by the function preg_match

2005-12-27  Martin Geisler  <mgeisler@mgeisler.net>

	* phpshell.php:
	Added code to prevent simple replay attacks by only accepting each
	login form once.
	
2005-12-25  Martin Geisler  <mgeisler@mgeisler.net>

	* INSTALL: Information about the new internal configuration.
	
	* phpshell.php: Made authentication internal.

	* SECURITY: New file.

	* config.php: New file.

	* style.css: New file.  Renamed from phpshell.css.

2004-03-27  Martin Geisler  <mgeisler@mgeisler.net>

	* phpshell.php 1.29: Removed debug output.

	* README 1.11: Updated documentation for new cool shell-like interface.

	* INSTALL 1.5:
	Updated documentation about the command substitution using alises.

	* phpshell.css 1.2:
	New styles to make the textarea and input box blend together.

	* phpshell.php 1.28: A little documentation for the alias feature.

	* phpshell.php 1.27:
	The shell now looks and behaves much more like a real shell: the shell
	now has a commandline history just like a real shell.

	The parsing of 'cd' commands have been rewritten so that even more
	special cases are taken care of, and simple command substitution using
	aliases have been introduced.

2004-03-24  Martin Geisler  <mgeisler@mgeisler.net>

	* phpshell.php 1.26:
	Increased year of copyright to 2004.  Fixed the references to the PNG
	images, as pointed out by Michael Z. Bell.

2003-11-11  Martin Geisler  <mgeisler@mgeisler.net>

	* AUTHORS 1.6:
	Added Wolfgang Dautermann <wolfgang.dautermann@fh-joanneum.at>.

	* phpshell.php 1.25:
	Ups, I commited with $passwd = array('foo' => 'bar').

	* phpshell.php 1.24: